[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Part_Arm.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Hub_02.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Face.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Body.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Hub_01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Leg_F.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_15/Pawn_15_Leg_B.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Pawns/Pawn_15_Parts/Pawn_15_Pic.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_15_Hub_01/Pawn_15_Hub_02:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.9, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_15_Leg_F:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_15_Leg_B:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[node name="Pawn_15_Pic" type="Node2D"]
script = ExtResource( 8 )

[node name="Pawn_15_Leg_B" type="Sprite" parent="."]
position = Vector2( -4, -23 )
texture = ExtResource( 7 )
hframes = 33
frame = 2

[node name="Pawn_15_Body" type="Sprite" parent="."]
position = Vector2( 2, -34 )
texture = ExtResource( 4 )
hframes = 3

[node name="Pawn_15_Face" type="Sprite" parent="Pawn_15_Body"]
texture = ExtResource( 3 )

[node name="Pawn_15_Leg_F" type="Sprite" parent="."]
position = Vector2( -4, -24 )
texture = ExtResource( 6 )
hframes = 33
frame = 2

[node name="Pawn_15_Hub_01" type="Sprite" parent="."]
position = Vector2( -4, -40 )
texture = ExtResource( 5 )

[node name="Pawn_15_Hub_02" type="Sprite" parent="Pawn_15_Hub_01"]
texture = ExtResource( 2 )
hframes = 8
frame = 1

[node name="Pawn_15_Part_Arm" type="Sprite" parent="."]
position = Vector2( 4, -26 )
texture = ExtResource( 1 )
offset = Vector2( 12, 4 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
